# internal/api/server.go
@@ -195,6 +195,9 @@ func (s *Server) routes() {
 			pr.Get("/artist/{source}/{id}/coverage", s.handleArtistCoverage)
 			pr.Get("/album/{source}/{id}", s.handleAlbumDetail)
 			pr.Get("/library/playlist/{id}", s.handleLibraryPlaylist)
+			pr.Put("/library/playlist/{id}", s.handleRenamePlaylist)
+			pr.Delete("/library/playlist/{id}", s.handleDeletePlaylist)
+			pr.Post("/library/playlist/{id}/remove", s.handleRemovePlaylistTracks)
 			pr.Post("/downloads/batch", s.handleBatchDownload)
 			pr.Post("/downloads", s.handleCreateDownload)
 			pr.Get("/downloads", s.handleListDownloads)
